tests/snapshots/unexpected_eof__add_expr_no_rhs.snap
---
source: tests/unexpected_eof.rs
expression: stderr

---
error: Expected literal, found end of file
      |
    1 | please add 5 t
      |               ^

